Delete house endpoint done
